--- a/examples/ml_pipeline/verity_project_conf.yaml
+++ b/examples/ml_pipeline/verity_project_conf.yaml
@@ -1,6 +1,7 @@
 name: churn_prediction_ml
 version: "0.1.0"
 profile: default
+engine: duckdb  # Options: duckdb (default), datafusion
 target-path: target
 config-paths: ["config"]
 model-paths: ["models"]
