--- a/verity-core/Cargo.toml
+++ b/verity-core/Cargo.toml
@@ -20,6 +20,7 @@ regex = { workspace = true }
 async-trait = { workspace = true }
 miette = { workspace = true }
 duckdb = { workspace = true }
+datafusion = { workspace = true }
 validator = { workspace = true }
 walkdir = { workspace = true }
 lazy_static = { workspace = true }
