--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,38 +10,49 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  # 1. Security Audit (Optimized with binary cache)
+  # 1. Security Audit (Dependencies + Secrets + Zero-Panic)
   security_audit:
-    name: Security Audit (Cargo Audit)
+    name: 🛡️ Security Audit
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      # Cache the cargo-audit binary to avoid recompiling it
+        with:
+          fetch-depth: 0  # Needed for Gitleaks full history scan
+
+      # --- Cargo Audit (CVE in dependencies) ---
       - name: Cache cargo-audit binary
         id: cache-cargo-audit
         uses: actions/cache@v3
         with:
           path: ~/.cargo/bin/cargo-audit
-          key: ${{ runner.os }}-cargo-audit-0.18 # Clé de cache
-      
-      # Only if the cache is empty
+          key: ${{ runner.os }}-cargo-audit-0.18
+
       - name: Install cargo-audit
         if: steps.cache-cargo-audit.outputs.cache-hit != 'true'
         run: cargo install cargo-audit
 
-      # Run the command directly (faster than the action wrapper if we already have the binary)
-      - name: Run Security Audit
+      - name: Run Cargo Audit
         run: cargo audit
 
-  # 2. Linting & Formatting
-  # 2. Build & Test (Optimized)
+      # --- Gitleaks (Secret detection) ---
+      - name: Gitleaks Scan
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # --- Zero-Panic Guard (No .unwrap()/.expect()/panic! in prod) ---
+      - name: Zero-Panic Guard
+        run: |
+          chmod +x .github/hooks/deny_unsecure.sh
+          ./.github/hooks/deny_unsecure.sh
+
+  # 2. Build & Test
   build_and_test:
-    name: Build & Test
+    name: 🔨 Build & Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
