refactor: modularize CLI into commands/ modules + add inspect subcommand + dual-engine docs
- Split main.rs (285 → 45 lines) into thin dispatcher + 6 command modules
- Replace dead cli.rs with single source of truth for Clap definitions
- Convert hardcoded bin/inspect.rs into parameterizable 'verity inspect' subcommand
- Update README: DataFusion engine support, inspect command, engine selection docs
- Add new CLI test: test_cli_parse_inspect

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,11 +1,11 @@
 # ============================================
 # Verity — CODEOWNERS
 # ============================================
-# Chaque PR modifiant ces chemins requiert
-# l'approbation des owners listés.
+# Each PR modifying these paths requires
+# approval of the listed owners.
 # Docs: https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
-# --- Global fallback (toute modification) ---
+# --- Global fallback (all modifications) ---
 * @axel-mauroy
 
 # --- Core Engine (Hexagonal Architecture) ---
