--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ async-trait = "0.1.89"
 chrono = { version = "0.4", features = ["serde"] }
 miette = { version = "7.2.0", features = ["fancy"] }
 walkdir = "2.5.0"
-lazy_static = "1.5.0"
+futures = "0.3"
 validator = { version = "0.20", features = ["derive"] }
 tracing = "0.1.44"
 tempfile = "3.24.0"
