--- a/verity-core/Cargo.toml
+++ b/verity-core/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 
 [dependencies]
 tokio = { workspace = true }
-futures = "0.3"
+futures = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 chrono = { workspace = true }
