feat(ci): configure cargo-deny and add E2E tests
- Added cargo-deny configuration (deny.toml)
- Added 'e2e' job to CI for running example projects
- Fixed verity-core schema parsing (optional version field)
- Updated example schema files to fix invalid null versions

--- a/examples/basic_rag_pipeline/models/staging/digital/stg_embeddings.yml
+++ b/examples/basic_rag_pipeline/models/staging/digital/stg_embeddings.yml
@@ -2,7 +2,7 @@ schema:
 - model_name: stg_embeddings
   description: Vector embeddings for semantic search
   config:
-    version: null
+    version: 1
     status: provisioning
     latest: false
   compliance:
