refactor: ci build optim

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,15 +10,17 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  fmt:
-    name: 🎨 Rustfmt
+  lints:
+    name: 🎨 Lints
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
         with:
-          components: rustfmt
+          components: rustfmt, clippy
+      - uses: swatinem/rust-cache@v2
       - run: cargo fmt --all -- --check
+      - run: cargo clippy --workspace -- -D warnings
 
   security:
     name: 🛡️ Security & License
@@ -27,75 +29,68 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Cache Rust dependencies
-        uses: swatinem/rust-cache@v2
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
-      - name: Run security audit
-        run: cargo audit
-      - name: Gitleaks Scan
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Zero-Panic Guard
-        run: |
-          chmod +x .github/hooks/deny_unsecure.sh
-          ./.github/hooks/deny_unsecure.sh
+      - uses: swatinem/rust-cache@v2
+      
       - name: Cargo Deny
         uses: EmbarkStudios/cargo-deny-action@v2
         with:
           command: check
+      - name: Install cargo-audit
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-audit
+      - run: cargo audit
 
-  clippy:
-    name: 📎 Clippy
+      - name: Gitleaks Scan
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Zero-Panic Guard
+        run: |
+          chmod +x .github/hooks/deny_unsecure.sh
+          ./.github/hooks/deny_unsecure.sh
+
+  build:
+    name: 🏗️ Global Build
     runs-on: ubuntu-latest
-    needs: [fmt]
+    needs: [lints]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-        with:
-          components: clippy
       - uses: swatinem/rust-cache@v2
-      - run: cargo clippy --workspace -- -D warnings
+      - run: cargo build --release --bin verity
+      - uses: actions/upload-artifact@v4
+        with:
+          name: verity-binary
+          path: target/release/verity
 
   test:
-    name: 🧪 Unit & Integration Tests
+    name: 🧪 Unit Tests
     runs-on: ubuntu-latest
-    needs: [clippy]
+    needs: [lints]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: swatinem/rust-cache@v2
-      - run: cargo test --workspace
-
-      - name: Run Coverage
-        run: |
-          cargo install cargo-tarpaulin
-          cargo tarpaulin --out Xml --verbose
+      - name: Install Tarpaulin
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-tarpaulin
+      - run: cargo tarpaulin --out Xml --verbose --workspace
 
   e2e:
     name: 🚀 E2E Examples
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [build]
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: swatinem/rust-cache@v2
-
-      - name: Build CLI (Release)
-        run: cargo build --release --bin verity
-
-      - name: E2E - Basic RAG Pipeline (DuckDB)
-        working-directory: examples/basic_rag_pipeline
-        run: ../../target/release/verity run
-
-      - name: E2E - ML Pipeline (DataFusion)
-        working-directory: examples/ml_pipeline
-        run: ../../target/release/verity run
-
-  bench:
-    name: ⚡ Performance Benchmark
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: cargo bench
+      - uses: actions/download-artifact@v4
+        with:
+          name: verity-binary
+          path: bin/
+      - run: chmod +x bin/verity
+      - name: E2E - Basic RAG
+        run: cd examples/basic_rag_pipeline && ../../bin/verity run
+      - name: E2E - ML Pipeline
+        run: cd examples/ml_pipeline && ../../bin/verity run
