feat(core): enforce 1-model-1-file and fuzzy policy injection
- Enforced strict 1-to-1 model-to-schema mapping in discovery.rs.
- Implemented fuzzy policy injection (based on policies.yml patterns).
- Added JSON-LD lineage export feature.
- Refactored ml_pipeline schemas.

Validation:
- Verified automatic PII masking.
- Validated JSON-LD export.

--- a/examples/basic_rag_pipeline/verity_project_conf.yaml
+++ b/examples/basic_rag_pipeline/verity_project_conf.yaml
@@ -27,5 +27,9 @@ governance:
     # rules are present in config/quality.yml
 
   environments:
+    dev:
+      strict_mode: false
+    uat:
+      strict_mode: true
     prod:
       strict_mode: true
