--- a/examples/ml_pipeline/models/staging/stg_users.yml
+++ b/examples/ml_pipeline/models/staging/stg_users.yml
@@ -1,8 +1,9 @@
 schema:
 - model_name: stg_users
-  description: Version 1 of stg_users
+  description: Raw user data with PII
   config:
     materialized: table
+    security_level: internal
     data_contract: false
     data_catalog: false
     version: 1
@@ -11,17 +12,26 @@ schema:
     governance:
       tech_owner: Axel Mauroy
   columns:
+  - name: user_id
+    tests:
+    - unique
+    - not_null
+  - name: email
+    description: User email address
+    tests:
+    - not_null
+    policy: pii_masking
   - name: name
     description: User full name
     policy: pii_masking
-  - name: signup_date
-    description: Auto-detected
-  - name: user_id
-    description: Auto-detected
   - name: region
-    description: Auto-detected
+    tests:
+    - not_null
   - name: subscription_tier
-    description: Auto-detected
-  - name: email
-    description: User email address
-    policy: pii_masking
+    description: "User subscription level"
+    tests:
+    - not_null
+  - name: signup_date
+    description: "Date of user signup"
+    tests:
+    - not_null
