--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ walkdir = "2.5.0"
 futures = "0.3"
 validator = { version = "0.20", features = ["derive"] }
 tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
 tempfile = "3.24.0"
 
 # --- Data & AI ---
