feat(governance): enforce Zero-Trust PII compliance at execution time
- Create [GovernanceLinter](cci:2://file:///Users/axelmauroy/Verity-governance-by-design/verity-governance-as-code/verity-core/src/domain/governance/linter.rs:8:0-10:1) for dynamic PII detection (Regex based)
- Extend DB [Connector](cci:2://file:///Users/axelmauroy/Verity-governance-by-design/verity-governance-as-code/verity-core/src/ports/connector.rs:19:0-59:1) traits with [fetch_sample](cci:1://file:///Users/axelmauroy/Verity-governance-by-design/verity-governance-as-code/verity-core/src/ports/connector.rs:20:4-23:5) to safely extract previews
- Inject linter check directly into the DataFusion [execute_node](cci:1://file:///Users/axelmauroy/Verity-governance-by-design/verity-governance-as-code/verity-core/src/application/pipeline.rs:286:0-400:1) pipeline phase
- Patch example  missing security tags caught by the linter
feat:Implemented fuzzy matching logic in
discovery.rs to automatically apply governance policies (e.g., pii_masking) to columns based on regex patterns define in policies.yml
.
Validation: Confirmed that columns like
email
 inherently receive protection without manual annotation in legacy schemas.
One-Model-One-File: Enforced strict 1:1 mapping between models and schema files, improving project organization.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,20 +45,31 @@ clap = { version = "4.5.54", features = ["derive", "env"] }
 comfy-table = "7.2.2"
 sqlparser = "0.59"
 
+# --- TESTING ---
+assert_cmd = "2.1.2"
+predicates = "3.1.4"
+fs_extra = "1.3.0"
+insta = { version = "1.46.3", features = ["yaml"] }
+
 # --- INTERNE ---
 verity-core = { path = "./verity-core", version = "0.1.0" }
 verity-connectors = { path = "./verity-connectors", version = "0.1.0" }
 
 # --- PROFILS ---
-[profile.dev]
+[profile.dev] # (cargo build / cargo run)
 opt-level = 0
 debug = true
+incremental = true 
 split-debuginfo = "unpacked"
 
-[profile.release]
+[profile.dev.package."*"]
+opt-level = 2           # Optimizing external libs as much as possible (DataFusion, Arrow)
+
+[profile.release] # (cargo build --release)
 opt-level = 3
-lto = "fat"
-codegen-units = 1
+lto = "thin"
+# lto = "fat"
+codegen-units = 16
 panic = "abort"
 strip = "symbols"
 
