--- a/examples/ml_pipeline/models/staging/stg_model_metadata.yml
+++ b/examples/ml_pipeline/models/staging/stg_model_metadata.yml
@@ -27,3 +27,4 @@ schema:
     description: Auto-detected by Verity
   - name: created_by
     description: Auto-detected by Verity
+    policy: pii_masking
