--- a/verity/Cargo.toml
+++ b/verity/Cargo.toml
@@ -14,3 +14,13 @@ tracing = { workspace = true }
 miette = { workspace = true }
 duckdb = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+[dev-dependencies]
+assert_cmd = { workspace = true }
+predicates = { workspace = true }
+datafusion = { workspace = true }
+tempfile = { workspace = true }
+serde_yaml = { workspace = true }
+fs_extra = { workspace = true }
+insta = { workspace = true }
+walkdir = { workspace = true }
