refactor(engine): zero-copy architecture, parallel DAG execution, and strict governance
This commit marks a major architectural overhaul of the execution core (verity-core)
to ensure performance at scale and enforce the "Zero-Trust" promise.

Performance & Concurrency:
- Removed blocking Mutexes in DataFusionConnector to prevent thread starvation.
- Refactored pipeline.rs to separate state reading from concurrent execution (Fixes E0502).
- Enabled massively parallel execution of DAG nodes by layers using buffer_unordered(8).

Strongly Typed Governance (Fail-Fast):
- Migrated "Stringly Typed" YAML configurations to strict Rust Enums (PolicyType, MaskingStrategy).
- Implemented custom Serde deserialization to maintain a flat, developer-friendly YAML DX (e.g., policy: hash).
- Added strict compilation validation to catch dangling references in the dependency graph.

Memory Management (Zero-Copy):
- Optimized GraphSolver (Kahn's algorithm) using explicit lifetimes (&'a str).
- Eliminated unnecessary String heap allocations during manifest parsing and DAG resolution.
- Structured DataFusion UDFs for direct, zero-copy manipulation of Apache Arrow memory vectors.

Architecture:
- Standardized on Apache DataFusion as the exclusive embedded local execution engine.
- Established a "Shift-Left" workflow, allowing Data Engineers to test PII masking policies
  locally without requiring external cloud infrastructure.

--- a/examples/basic_rag_pipeline/config/policies.yml
+++ b/examples/basic_rag_pipeline/config/policies.yml
@@ -19,32 +19,32 @@ pii_detection:
       regex: '\b\d{3}[-.]?\d{3}[-.]?\d{4}\b'
       severity: high
       action: mask
-      masking_strategy: redaction # Ex: "[REDACTED]"
+      masking_strategy: redact # Ex: "[REDACTED]"
       
     - name: ssn
       regex: '\b\d{3}-\d{2}-\d{4}\b'
       severity: critical
       action: block
-      masking_strategy: redaction # Ex: "123-45-6789" -> "***-**-6789"
+      masking_strategy: redact # Ex: "123-45-6789" -> "***-**-6789"
       
     - name: credit_card
       regex: '\b\d{4}[\s-]?\d{4}[\s-]?\d{4}[\s-]?\d{4}\b'
       severity: critical
       action: block
-      masking_strategy: redaction # Ex: "1234-5678-9012-3456" -> "****-****-****-3456"
+      masking_strategy: redact # Ex: "1234-5678-9012-3456" -> "****-****-****-3456"
 
   # Column-level policies
   column_policies:
     - column_name_pattern: '.*email.*'
-      policy: pii_masking
+      policy: hash
       environments: [dev, uat]
       
     - column_name_pattern: '.*phone.*'
-      policy: pii_masking
+      policy: hash
       environments: [dev, uat]
       
     - column_name_pattern: '.*ssn.*'
-      policy: pii_blocking
+      policy: drop
       environments: [dev, uat, prod]
 
 
