--- a/examples/basic_rag_pipeline/config/connections.yml
+++ b/examples/basic_rag_pipeline/config/connections.yml
@@ -7,8 +7,7 @@ default:
   target: local
   outputs:
     local:
-      type: duckdb
-      database: 'target/verity.duckdb'
+      type: datafusion
       threads: 4
       job_execution_timeout_seconds: 1800
       job_retries: 2
