--- a/deny.toml
+++ b/deny.toml
@@ -29,17 +29,17 @@ allow = [
     "Unlicense",
     "0BSD",
     "Unicode-3.0",
-
+    "Unicode-DFS-2016",
     "CC0-1.0",
     "MIT-0",
     "BSL-1.0",
     "CDLA-Permissive-2.0",
-
+    "OpenSSL",
 ]
 confidence-threshold = 0.8
 
 exceptions = [
-
+    { allow = ["CDLA-Permissive-2.0"], crate = "bzip2-sys" },
     { allow = ["bzip2-1.0.6"], crate = "libbz2-rs-sys" },
 ]
 
