--- a/examples/basic_rag_pipeline/models/staging/finance/stg_finance_transactions.yml
+++ b/examples/basic_rag_pipeline/models/staging/finance/stg_finance_transactions.yml
@@ -3,15 +3,17 @@ schema:
     description: "Transactions bancaires nettoyées et conformes."
     
     config:
-      materialized: table
-      tech_owner: "finance_data_team@@verity.com"
-      business_owner: "finance_team@@verity.com"
-      security_level: confidential
-      version: 1
-      latest: false
-      status: erased
-      erasure_date: "2024-01-31"
-      replacement_model: "stg_finance_transactions_v2"
+    materialized: table
+    data_contract: false
+    data_catalog: false
+    version: 1
+    latest: false
+    status: erased
+    erasure_date: "2024-01-31"
+    replacement_model: "stg_finance_transactions_v2"
+    governance:
+      business_owner: super_finance@example.com
+      tech_owner: data_engineering@example.com
     
     compliance:
       pre_flight:
