--- a/examples/ml_pipeline/models/features/feat_user_engagement.yml
+++ b/examples/ml_pipeline/models/features/feat_user_engagement.yml
@@ -1,18 +1,23 @@
 schema:
 - model_name: feat_user_engagement
-  description: Version 1 of feat_user_engagement
+  description: This model is used to compute user engagement features
   config:
     materialized: table
+    security_level: internal
     data_contract: false
     data_catalog: false
     version: 1
     status: provisioning
     latest: true
     governance:
-      tech_owner: Axel Mauroy
+      business_owner: super_marketing@example.com
+      tech_owner: ml_engineering@example.com
   columns:
   - name: user_id
     description: Auto-detected
+    tests:
+    - unique
+    - not_null
   - name: last_active_at
     description: Auto-detected
   - name: api_usage_count
