--- a/examples/ml_pipeline/models/staging/stg_activity.yml
+++ b/examples/ml_pipeline/models/staging/stg_activity.yml
@@ -3,13 +3,15 @@ schema:
   description: User activity logs
   config:
     materialized: table
+    security_level: internal
     data_contract: false
     data_catalog: false
     version: 1
     status: provisioning
     latest: true
     governance:
-      tech_owner: Axel Mauroy
+      business_owner: super_marketing@example.com
+      tech_owner: data_engineering@example.com
   columns:
   - name: activity_id
     tests:
